[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/b1_16x16_black.png" type="Texture" id=1]
[ext_resource path="res://Assets/b1_16x16.png" type="Texture" id=2]
[ext_resource path="res://Assets/b7_16x16_black.png" type="Texture" id=3]
[ext_resource path="res://Assets/b7_16x16.png" type="Texture" id=4]
[ext_resource path="res://Assets/b12_16x16.png" type="Texture" id=5]
[ext_resource path="res://Assets/b12_16x16_black.png" type="Texture" id=6]
[ext_resource path="res://Assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Main.gd" type="Script" id=8]
[ext_resource path="res://Assets/vecteezy_square_1209957.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 7 )

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="VecteezySquare1209957" type="Sprite" parent="."]
position = Vector2( 514.5, 303 )
scale = Vector2( 1.95826, 1.14701 )
texture = ExtResource( 9 )

[node name="AddPoint" type="TouchScreenButton" parent="."]
position = Vector2( 223, 385 )
scale = Vector2( 9.0625, 8.5625 )
normal = ExtResource( 2 )
pressed = ExtResource( 1 )

[node name="Quit" type="TouchScreenButton" parent="."]
position = Vector2( 638, 129 )
scale = Vector2( 8.9375, 9.3125 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )

[node name="Reset" type="TouchScreenButton" parent="."]
position = Vector2( 645, 342 )
scale = Vector2( 8.6875, 8.75 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 516, 300 )

[node name="Label" type="Label" parent="."]
margin_left = 82.0
margin_top = 85.0
margin_right = 484.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[connection signal="pressed" from="AddPoint" to="." method="_on_AddPoint_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_Reset_pressed"]
